force-app/main/default/objects/Account/fields/DMS__c.field-meta.xml
<CustomField>
    <fullName>DMS__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DMS</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (DMS)</relationshipLabel>
    <relationshipName>Accounts3</relationshipName>
    <type>Lookup</type>
</CustomField>