force-app/main/default/objects/Account/fields/eConsent__c.field-meta.xml
<CustomField>
    <fullName>eConsent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>eConsent</label>
    <type>Checkbox</type>
</CustomField>