force-app/main/default/objects/Account/fields/Finance_Ops_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Finance_Ops_Account_Number__c</fullName>
    <label>Finance Ops Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>