force-app/main/default/objects/Account/fields/Imaging_Network__c.field-meta.xml
<CustomField>
    <fullName>Imaging_Network__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Imaging Network</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Network</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Imaging Network)</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>