force-app/main/default/objects/Account/fields/Magentus_Region__c.field-meta.xml
<CustomField>
    <fullName>Magentus_Region__c</fullName>
    <label>Magentus Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>North</fullName>
            </value>
            <value>
                <fullName>South</fullName>
            </value>
            <value>
                <fullName>Midlands</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>