force-app/main/default/objects/Account/fields/Max_Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Max_Contract_End_Date__c</fullName>
    <label>Max Contract End Date</label>
    <type>Date</type>
</CustomField>