force-app/main/default/objects/Account/fields/NHS_Type__c.field-meta.xml
<CustomField>
    <fullName>NHS_Type__c</fullName>
    <label>NHS Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prime Contractor</fullName>
            </value>
            <value>
                <fullName>Consortium</fullName>
            </value>
            <value>
                <fullName>Trust</fullName>
            </value>
            <value>
                <fullName>Hosiptal</fullName>
                <label>Hosiptal/Site</label>
            </value>
            <value>
                <fullName>Board</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>