force-app/main/default/objects/Account/fields/Radiology_Network__c.field-meta.xml
<CustomField>
    <fullName>Radiology_Network__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Radiology Network</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Radiology Network)</relationshipLabel>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>