force-app/main/default/objects/Account/recordTypes/Network.recordType-meta.xml
<RecordType>
    <fullName>Network</fullName>
    <active>true</active>
    <label>Network</label>
</RecordType>