force-app/main/default/objects/Account/listViews/AllAccounts.listView-meta.xml
<ListView>
    <fullName>AllAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>Magentus_Region__c</columns>
    <columns>Client_Type__c</columns>
    <columns>NHS_Type__c</columns>
    <columns>PARENT_NAME</columns>
    <columns>Imaging_Network__c</columns>
    <columns>Pathology_Network__c</columns>
    <columns>Radiology_Network__c</columns>
    <columns>Speciality__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Accounts</label>
</ListView>