force-app/main/default/objects/Account/listViews/Org_Account_Hierarchy.listView-meta.xml
<ListView>
    <fullName>Org_Account_Hierarchy</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>NHS_Type__c</columns>
    <columns>Client_Type__c</columns>
    <columns>PARENT_NAME</columns>
    <columns>Imaging_Network__c</columns>
    <columns>Pathology_Network__c</columns>
    <columns>Speciality__c</columns>
    <filterScope>Everything</filterScope>
    <label>Org_Account_Hierarchy</label>
</ListView>